# codeview

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOY_INSTRUCTIONS.md  EDIT_PLAN.md  ISSUES.md  README.md  codeview  commit-playground.sh  install.sh
.github/workflows/: pages.yml  release.yml
ISSUES/: 001-refactor-interface-rs.md
issues/: 001-dead-code-cleanup.md
playground/: index.html  package-lock.json  package.json  vite.config.js
playground/src/: examples.js  main.js  parser.js  style.css  tsParser.js
skill/: SKILL.md
src/: error.rs  lib.rs  main.rs  parser.rs  search.rs  walk.rs
src/editor/: mod.rs
src/extractor/: collapse.rs  expand.rs  interface.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/languages/: javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/output/: json.rs  mod.rs  plain.rs  stats.rs
testdata/: demo.rs
tests/: editor_test.rs  integration_test.rs  javascript_test.rs  json_test.rs  lines_test.rs  list_symbols_test.rs  max_lines_test.rs  python_test.rs  search_test.rs  signatures_test.rs  typescript_test.rs
